# rail-free-ai-chat

./: .env.example  .gitignore  Dockerfile  README.md  app.py  chainlit.md  docker-compose.yml  interpreter_cli.py  pyproject.toml
agent/: __init__.py  graph.py  mcp_config.py  tools.py
epic_executor/: __init__.py  cli.py  executor.py  impl_agent.py  parser.py  pool.py  scheduler.py  status.py  verify_agent.py
tts/: __init__.py  edge_tts_service.py
